# os-abst-lib

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
docs/: Doxyfile
include/: OAL_dir.h  OAL_error.h  OAL_file.h  OAL_flags.h  OAL_os.h  OAL_paths.h  OAL_string.h  OsAbstLib.h  os_dir.h  os_file.h  os_paths.h  os_string.h  os_type.h
src/: OAL_dir.c  OAL_error.c  OAL_file.c  OAL_os.c  OAL_paths.c  OAL_string.c  os_dir.c  os_file.c  os_paths.c  os_string.c  os_type.c  private_consts.c  private_consts.h  private_funcs.c  private_funcs.h  tests.c
src/unix/: OAL_dir_unix.c  OAL_file_unix.c  OAL_paths_unix.c  os_dir_unix.c  os_paths_unix.c
src/win_nt/: OAL_dir_win_nt.c  OAL_file_win_nt.c  OAL_paths_win_nt.c  os_dir_win_nt.c  os_paths_win_nt.c  private_funcs_win_nt.c  private_funcs_win_nt.h
